@@ -14,6 +14,7 @@ Unreleased Version 2.3.1-pre
  * Fix: Clamp OKLAB colors the proper way round. Thanks Bonbli for reporting.
  * Feature: Replace autosave mechanism with more robust auto-recording. Work in progress.
  * Fix: Make setting kinetic scrolling to touch drag not trigger long-presses immediately on Android.
+ * Fix: Properly clear invalid selection areas when masking brush strokes (shouldn't happen in the first place though.)
 
 2025-11-18 Version 2.3.0
  * Fix: Don't show "exit layer view" notice when there's no canvas.
